--- a/nodejsapp1/public/config.json
+++ b/nodejsapp1/public/config.json
@@ -17,5 +17,8 @@
         "width": 300,
         "fullscreen": true
       }
+    },
+    "configurationArguments": {
+      "applicationExtensionKey": "9e3bf295-2c10-49b8-be36-d49c9d0c3f7e"
     }
   }
