--- a/nodejsapp1/public/config.json
+++ b/nodejsapp1/public/config.json
@@ -18,7 +18,80 @@
         "fullscreen": true
       }
     },
-    "configurationArguments": {
-      "applicationExtensionKey": "9e3bf295-2c10-49b8-be36-d49c9d0c3f7e"
-    }
+    "arguments":{
+      "execute":{
+          "url":"https://custom-activity-demoaltimetrik.herokuapp.com/activity/execute",
+          "verb":"POST",
+          "body":"",
+          "header":"",
+          "format":"json",
+          "useJwt":false,
+          "timeout":100000,
+          "retryCount":5,
+          "retryDelay":10000,
+          "concurrentRequests":1,
+          "inArguments":[ 
+          ],
+          "outArguments":[
+              {
+                  "status":""
+              },
+              {
+                  "errMsg":""
+              }
+          ]
+      }
+  },
+  "configurationArguments":{
+      "applicationExtensionKey": "9e3bf295-2c10-49b8-be36-d49c9d0c3f7e",
+      "save":{
+          "url":"https://custom-activity-demoaltimetrik.herokuapp.com/activity/save",
+          "verb":"POST",
+          "useJwt":false
+      },
+      "validate":{
+          "url":"https://custom-activity-demoaltimetrik.herokuapp.com/activity/validate",
+          "verb":"POST",
+          "useJwt":false
+      },
+      "publish":{
+          "url":"https://custom-activity-demoaltimetrik.herokuapp.com/activity/publish",
+          "verb":"POST",
+          "useJwt":false
+      },
+      "unpublish":{
+          "url":"https://custom-activity-demoaltimetrik.herokuapp.com/activity/unpublish",
+          "verb":"POST",
+          "useJwt":false
+      },
+      "stop":{
+          "url":"https://custom-activity-demoaltimetrik.herokuapp.com/activity/stop",
+          "verb":"POST",
+          "useJwt":false
+      }
+  },
+  "schema":{
+      "arguments":{
+          "execute":{
+              "outArguments":[
+                  {
+                      "status":{
+                          "dataType":"Text",
+                          "isNullable":true,
+                          "access":"Visible",
+                          "direction":"Out"
+                      }
+                  },
+                  {
+                      "errMsg":{
+                          "dataType":"Text",
+                          "isNullable":true,
+                          "access":"Visible",
+                          "direction":"Out"
+                      }
+                  }
+              ]
+          }
+      }
   }
+}
